export type Interaction = {
  id: string;
  value: string;
  code: string;
  gif: string;
};
